// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS selectors should allow for color replacment 1`] = `
<div>
  <style>
     .react-outline- .abc{ font-size:20px; } .react-outline-{color:squanchy; }
  </style>
  <div
    className="react-outline-"
    name="div"
  />
</div>
`;

exports[`CSS selectors should allow you to select a nested element 1`] = `
<div>
  <style>
     .react-outline- .abc{ font-size:20px; } .react-outline-{color:red; }
  </style>
  <div
    className="react-outline-"
    name="div"
  />
</div>
`;

exports[`CSS selectors should work with user defined callNames 1`] = `
<div>
  <div
    className="a react-outline-"
    name="a"
  />
  <div
    className="react-outline-"
    name="a"
  />
  <div
    className="b"
    name="b"
  />
  <div
    name="b"
  />
</div>
`;

exports[`In production mode should allow cross cutting style to map to only functions 1`] = `
<span
  name="foo"
  style={
    Object {
      "background": "gray",
      "fontSize": "20px",
    }
  }
/>
`;

exports[`In production mode should allow cross cutting style to map to only functions 2`] = `
<span
  name="bar"
  style={
    Object {
      "background": "black",
      "fontSize": "20px",
    }
  }
/>
`;

exports[`In production mode should be able to destructur assignments on generated element 1`] = `
<div
  name="cats"
  style={
    Object {
      "color": "pink",
    }
  }
/>
`;

exports[`In production mode should be able to destructur assignments on generated element 2`] = `
<div
  name="cats"
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`In production mode should be able to pass an value to style logic 1`] = `
<div
  name="dogs"
  style={
    Object {
      "color": "white",
    }
  }
/>
`;

exports[`In production mode should be able to pass an value to style logic 2`] = `
<div
  name="dogs"
  style={
    Object {
      "color": "black",
    }
  }
/>
`;

exports[`In production mode should be able to pass true value 1`] = `
<input
  disabled={true}
  name="input"
  style={
    Object {
      "background": "gray",
      "color": "red",
      "fontSize": "20px",
    }
  }
/>
`;

exports[`In production mode should generated an element with a logic fn that can take undefined 1`] = `
<span
  name="foo"
  style={
    Object {
      "background": "gray",
      "fontSize": "20px",
    }
  }
/>
`;
